--- a/debian/rules
+++ b/debian/rules
@@ -31,6 +31,7 @@ binary-indep: build install
 binary-arch: build install
 	dh_testdir
 	dh_testroot
+	dh_gconf
 	dh_installchangelogs 
 	dh_installdocs
 	dh_link
